add dev:win script for WSL dev mode on Windows
- dev-win.sh: starts vite dev server, cross-compiles Rust debug
  (no custom-protocol → uses devUrl), launches the .exe from WSL
- npm run dev:win as convenience alias

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "check": "npm run typecheck && npm test && npm run build && cd src-tauri && cargo fmt -- --check && cargo clippy -- -D warnings && cargo test",
     "appimage": "tauri build --bundles appimage",
     "appimage:arm64": "tauri build --target aarch64-unknown-linux-gnu --bundles appimage",
-    "win": "npm run build && cd src-tauri && cargo win"
+    "win": "npm run build && cd src-tauri && cargo win",
+    "dev:win": "bash dev-win.sh"
   },
   "dependencies": {
     "@preact/signals": "^2.7.0",
