simplify dev:win: drop shell script, inline npm script
Terminal 1: npm run dev (vite on :1420)
Terminal 2: npm run dev:win (cross-compile debug + launch .exe)

The .exe built without custom-protocol uses devUrl (localhost:1420).

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "appimage": "tauri build --bundles appimage",
     "appimage:arm64": "tauri build --target aarch64-unknown-linux-gnu --bundles appimage",
     "win": "npm run build && cd src-tauri && cargo win",
-    "dev:win": "bash dev-win.sh"
+    "dev:win": "cd src-tauri && cargo xwin build --target x86_64-pc-windows-msvc --no-default-features && ./target/x86_64-pc-windows-msvc/debug/lv.exe"
   },
   "dependencies": {
     "@preact/signals": "^2.7.0",
