feat: job engine, AI metadata extraction, info sidebar scrolling, CI
- jobs.rs: layered job engine with hash, exif, ai_basic workers
  - parallel workers with lazy/turbo throttling (- key toggle)
  - failure debounce via job_fails table
  - stats: done/failed/active counters, jobs/min rate, last error

- aimeta.rs: PNG AI metadata extraction
  - ComfyUI: parse workflow JSON for prompt + model name
  - A1111: parse parameters text block
  - supports tEXt and compressed iTXt chunks

- db.rs: job_fails schema, missing layer queries, pnginfo storage,
  collection stats, FileMeta.pnginfo field

- statusbar.rs: [T] turbo indicator, AI section in info panel,
  stats panel (collection + job counters), scrollable info sidebar

- main.rs: job engine lifecycle, turbo toggle, PgUp/PgDn/Home/End
  scroll, R key refresh

- ci.yml: add test-imgui job (SDL2 + libmpv)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,8 +65,36 @@ jobs:
         working-directory: src-tauri
         run: cargo test
 
+  test-imgui:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: src-imgui -> target
+          cache-all-crates: "true"
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libsdl2-dev \
+            libmpv-dev
+
+      - name: Cargo test
+        working-directory: src-imgui
+        run: cargo test
+
+      - name: Cargo check (release)
+        working-directory: src-imgui
+        run: cargo check --release
+
   build:
-    needs: test
+    needs: [test, test-imgui]
     runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
