--- a/src-imgui/Cargo.toml
+++ b/src-imgui/Cargo.toml
@@ -26,3 +26,6 @@ imgui = "0.12"
 imgui-sdl2-support = "0.13"
 imgui-glow-renderer = "0.13"
 glow = "0.14"
+sha2 = "0.10"
+sysinfo = "0.33"
+flate2 = "1"
