--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,12 +48,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - arch: x86_64
-            runner: ubuntu-latest
-            os: linux
-          - arch: aarch64
-            runner: ubuntu-24.04-arm
-            os: linux
+          # - arch: x86_64
+          #   runner: ubuntu-latest
+          #   os: linux
+          # - arch: aarch64
+          #   runner: ubuntu-24.04-arm
+          #   os: linux
           - arch: x86_64
             runner: ubuntu-latest
             os: windows
