--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,6 @@ on:
   pull_request:
     branches: [main, master]
 
-# Cache keys for apt packages (bump suffix to invalidate)
-env:
-  APT_CACHE_VER: v1
-  APT_DEPS_TEST: libsdl2-dev libmpv-dev
-  APT_DEPS_XWIN: llvm clang libsdl2-dev libmpv-dev nsis
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -26,21 +20,10 @@ jobs:
           workspaces: src-imgui -> target
           cache-all-crates: "true"
 
-      - name: Cache apt packages
-        uses: actions/cache@v4
-        with:
-          path: ~/apt-cache
-          key: apt-test-${{ env.APT_CACHE_VER }}
-
       - name: Install system dependencies
         run: |
-          if [ -d ~/apt-cache/archives ]; then
-            sudo cp ~/apt-cache/archives/*.deb /var/cache/apt/archives/ 2>/dev/null || true
-          fi
           sudo apt-get update
-          sudo apt-get install -y ${{ env.APT_DEPS_TEST }}
-          mkdir -p ~/apt-cache/archives
-          cp /var/cache/apt/archives/*.deb ~/apt-cache/archives/ 2>/dev/null || true
+          sudo apt-get install -y libsdl2-dev libmpv-dev
 
       - name: Cargo test
         working-directory: src-imgui
@@ -91,23 +74,11 @@ jobs:
           cache-all-crates: "true"
 
       # ── Linux build ──────────────────────────────────────────────────
-      - name: Cache apt packages (Linux)
-        if: matrix.os == 'linux'
-        uses: actions/cache@v4
-        with:
-          path: ~/apt-cache
-          key: apt-linux-${{ env.APT_CACHE_VER }}
-
       - name: Install system dependencies (Linux)
         if: matrix.os == 'linux'
         run: |
-          if [ -d ~/apt-cache/archives ]; then
-            sudo cp ~/apt-cache/archives/*.deb /var/cache/apt/archives/ 2>/dev/null || true
-          fi
           sudo apt-get update
-          sudo apt-get install -y ${{ env.APT_DEPS_TEST }}
-          mkdir -p ~/apt-cache/archives
-          cp /var/cache/apt/archives/*.deb ~/apt-cache/archives/ 2>/dev/null || true
+          sudo apt-get install -y libsdl2-dev libmpv-dev
 
       - name: Build (Linux)
         if: matrix.os == 'linux'
@@ -134,20 +105,13 @@ jobs:
           path: src-imgui/target/release/lv-imgui
 
       # ── Windows cross-compile ────────────────────────────────────────
-      - name: Cache apt packages (Windows)
-        if: matrix.os == 'windows'
-        uses: actions/cache@v4
-        with:
-          path: ~/apt-cache
-          key: apt-xwin-${{ env.APT_CACHE_VER }}
-
       - name: Cache cargo-xwin binary
         if: matrix.os == 'windows'
         uses: actions/cache@v4
         with:
           path: ~/.cargo/bin/cargo-xwin
-          key: cargo-xwin-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: cargo-xwin-${{ runner.os }}-
+          key: cargo-xwin-${{ runner.os }}
+          restore-keys: cargo-xwin-
 
       - name: Cache xwin MSVC CRT/SDK
         if: matrix.os == 'windows'
@@ -159,13 +123,8 @@ jobs:
       - name: Install cross-compile tools (Windows)
         if: matrix.os == 'windows'
         run: |
-          if [ -d ~/apt-cache/archives ]; then
-            sudo cp ~/apt-cache/archives/*.deb /var/cache/apt/archives/ 2>/dev/null || true
-          fi
           sudo apt-get update
-          sudo apt-get install -y ${{ env.APT_DEPS_XWIN }}
-          mkdir -p ~/apt-cache/archives
-          cp /var/cache/apt/archives/*.deb ~/apt-cache/archives/ 2>/dev/null || true
+          sudo apt-get install -y llvm clang libsdl2-dev libmpv-dev nsis
           which cargo-xwin || cargo install cargo-xwin --locked
 
       - name: Build (Windows)
