fix: Windows path prefix, shutdown hang, installer auto-launch
- clean_path(): strip \\?\ prefix at source (scanner + main canonicalize)
  instead of only in title display — fixes DB paths and all displays
- Shutdown: 2s deadline for render thread join, then force-drop mpv
  (was hanging ~10s waiting for mpv render thread)
- NSIS: add finish page with 'Launch lv' checkbox after install
- 5 new regression tests for clean_path (120 total)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,14 +27,18 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # ── arm64 cross-compile deps (multiarch) ─────────────────────────────
+# Note: libmpv-dev:arm64 has broken deps (libjack) on bookworm, so we
+# install only the runtime lib and reuse the native mpv headers.
 RUN dpkg --add-architecture arm64 \
     && apt-get update && apt-get install -y --no-install-recommends \
     gcc-aarch64-linux-gnu \
     g++-aarch64-linux-gnu \
     libc6-dev-arm64-cross \
     libsdl2-dev:arm64 \
-    libmpv-dev:arm64 \
-    && rm -rf /var/lib/apt/lists/*
+    libmpv2:arm64 \
+    && rm -rf /var/lib/apt/lists/* \
+    # Symlink arm64 mpv .so for the linker (headers come from native libmpv-dev)
+    && ln -sf /usr/lib/aarch64-linux-gnu/libmpv.so.2 /usr/lib/aarch64-linux-gnu/libmpv.so
 
 # ── Rust ──────────────────────────────────────────────────────────────
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | \
