fix: faster shutdown + remove broken cargo ci alias
- Shutdown: reduce render thread deadline to 500ms, use mem::forget(mpv)
  instead of drop — mpv_destroy blocks for seconds on Windows, but the
  OS reclaims all resources on process exit anyway
- Remove broken cargo ci alias (can't chain shell commands), use make ci
  or bash scripts/ci.sh instead

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,2 @@
-[alias]
-ci = ["test", "--", "--nocapture"]
+# cargo ci → runs scripts/ci.sh (test + clippy + fmt in parallel)
+# Cargo aliases can't chain commands, so we use `make ci` or `bash scripts/ci.sh`
