--- a/docker/Dockerfile.windows-x86_64
+++ b/docker/Dockerfile.windows-x86_64
@@ -19,14 +19,16 @@ WORKDIR /src
 COPY . .
 RUN cargo xwin build --release --target x86_64-pc-windows-msvc
 
-# Build NSIS installer
-RUN mkdir -p /out \
+# Build NSIS installer with version
+RUN LV_VERSION="$(grep '^version' Cargo.toml | head -1 | sed 's/.*"\(.*\)"/\1/')-$(git rev-parse --short HEAD 2>/dev/null || echo unknown)" \
+    && mkdir -p /out \
     && cp target/x86_64-pc-windows-msvc/release/lv-imgui.exe /out/ \
     && cp pkg/win64/SDL2.dll pkg/win64/libmpv-2.dll pkg/installer.nsi /out/ \
-    && cd /out && makensis installer.nsi
+    && cd /out && makensis -DLV_VERSION="$LV_VERSION" installer.nsi \
+    && mv lv-setup-*.exe lv-setup-windows-x86_64.exe
 
 FROM scratch
 COPY --from=build /out/lv-imgui.exe /lv-imgui-windows-x86_64.exe
 COPY --from=build /out/SDL2.dll /SDL2.dll
 COPY --from=build /out/libmpv-2.dll /libmpv-2.dll
-COPY --from=build /out/lv-setup.exe /lv-setup-windows-x86_64.exe
+COPY --from=build /out/lv-setup-windows-x86_64.exe /lv-setup-windows-x86_64.exe
