feat: drag-and-drop files and directories
- handle_drop() scans dropped file's parent dir or dropped dir
- Untracked dirs are temporarily tracked with files marked temporary
- Already-tracked dirs just re-scan for new files
- Exits collection mode on drop
- Wired to SDL2 Event::DropFile in main event loop
- 16 new tests covering: file/dir/video drop, non-media rejection,
  empty dir, no-media dir, nonexistent path, collection mode exit,
  tracked vs untracked, temporary marking, cursor positioning,
  mixed content, replacement, case insensitivity
- Added Db::open_memory() for cross-module test use
- Added tempfile dev-dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,6 @@ sysinfo = "0.33"
 flate2 = "1"
 clap = { version = "4", features = ["derive"] }
 notify = "7"
+
+[dev-dependencies]
+tempfile = "3"
