debug: add verbose watcher + main loop logging for file-not-found investigation
Watcher logging:
- Log every notify event kind + path count
- Log skip reasons (dir, non-media, non-media remove)
- Log processing path + is_remove flag
- Log remove miss when path not found in DB

Main loop logging:
- Log FsEvent kind, event dir vs current_dir, collection mode
- Log SKIP when event dir != current_dir (the likely bug)
- Log file count change and cursor id change
- Log FILE NOT FOUND with full path, cursor, file count, current_dir

CI fix:
- Upload artifact glob lv-setup-*.exe (NSIS outputs lv-setup-dev.exe,
  not lv-setup.exe)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,7 +139,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: lv-windows-x86_64-installer
-          path: build-installer/lv-setup.exe
+          path: build-installer/lv-setup-*.exe
 
       - name: Upload binary (Windows)
         if: matrix.os == 'windows'
