feat: borderless window with custom title bar, fix Windows path prefix
- Borderless SDL2 window with SDL_SetWindowHitTest for dragging
- Status bar moved to top as custom title bar with close/min/max buttons
- Info sidebar + stats anchored to bottom-right
- WindowAction enum for button click handling (close/minimize/maximize toggle)
- Fix \\?\ path prefix: apply clean_path in cli.rs after every canonicalize()
- Remove duplicate clean_path from scanner.rs, use single crate::clean_path
- Migrate Makefile targets to scripts/*.sh, document in .cargo/config.toml
- Crop app icon 1/8 from each side
- 350 tests pass, clippy clean

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,10 @@
-# cargo ci → runs scripts/ci.sh (test + clippy + fmt in parallel)
-# Cargo aliases can't chain commands, so we use `make ci` or `bash scripts/ci.sh`
+# Cargo aliases can only invoke cargo subcommands, not shell scripts.
+# Use scripts/*.sh directly:
+#   scripts/ci.sh                  — test + clippy + fmt (parallel)
+#   scripts/dev-linux.sh [args]    — debug build + run (Linux)
+#   scripts/dev-windows.sh [args]  — debug build + run (Windows/WSL)
+#   scripts/build-linux-intel.sh   — release x86_64 Linux
+#   scripts/build-linux-arm.sh     — release aarch64 Linux
+#   scripts/build-windows-intel.sh — release + NSIS installer Windows
+#   scripts/docker-build.sh [target|all]
+#   scripts/clean.sh
