--- a/docker/Dockerfile.linux-x86_64
+++ b/docker/Dockerfile.linux-x86_64
@@ -1,10 +1,10 @@
-# Build lv for Linux x86_64
+# Build lv AppImage for Linux x86_64
 # Usage: docker build -f docker/Dockerfile.linux-x86_64 -o dist .
 FROM debian:bookworm-slim AS build
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential ca-certificates curl pkg-config \
+    build-essential ca-certificates curl pkg-config file \
     libsdl2-dev libmpv-dev \
     && rm -rf /var/lib/apt/lists/*
 
@@ -17,5 +17,8 @@ COPY . .
 RUN cargo build --release --target x86_64-unknown-linux-gnu \
     && strip target/x86_64-unknown-linux-gnu/release/lv-imgui
 
+# Build AppImage (bundles libSDL2, libmpv, and transitive deps)
+RUN ./pkg/appimage.sh x86_64 target/x86_64-unknown-linux-gnu/release/lv-imgui
+
 FROM scratch
-COPY --from=build /src/target/x86_64-unknown-linux-gnu/release/lv-imgui /lv-imgui-linux-x86_64
+COPY --from=build /src/lv-*-x86_64.AppImage /lv-linux-x86_64.AppImage
