fix: Windows smoke test artifact download path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -202,7 +202,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: lv-windows-x86_64
-          path: .
+          path: build-installer
 
       - name: Generate test fixtures
         run: python test/fixtures/generate.py
