ci: add Windows artifact debug listing + nested path fallback

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -197,6 +197,18 @@ jobs:
           name: lv-windows-x86_64
           path: build-installer
 
+      - name: Verify download
+        run: |
+          echo "--- build-installer/ ---"
+          Get-ChildItem -Recurse build-installer | ForEach-Object { $_.FullName }
+          if (-not (Test-Path build-installer/lv-imgui.exe)) {
+            echo "exe not at expected path, checking nested..."
+            if (Test-Path build-installer/build-installer/lv-imgui.exe) {
+              echo "Found nested, moving up"
+              Move-Item build-installer/build-installer/* build-installer/ -Force
+            }
+          }
+
       - name: Generate test fixtures
         run: python test/fixtures/generate.py
 
