--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,9 @@ jobs:
           cache-all-crates: "true"
 
       - name: Install system dependencies
-        run: sudo apt-get install -y libsdl2-dev libmpv-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libsdl2-dev libmpv-dev
 
       - name: Cargo test
         run: cargo test
@@ -68,7 +70,9 @@ jobs:
       # ── Linux build ──────────────────────────────────────────────────
       - name: Install system dependencies (Linux)
         if: matrix.os == 'linux'
-        run: sudo apt-get install -y libsdl2-dev libmpv-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libsdl2-dev libmpv-dev
 
       - name: Build (Linux)
         if: matrix.os == 'linux'
@@ -111,6 +115,7 @@ jobs:
       - name: Install cross-compile tools (Windows)
         if: matrix.os == 'windows'
         run: |
+          sudo apt-get update
           sudo apt-get install -y llvm clang libsdl2-dev libmpv-dev nsis
           which cargo-xwin || cargo install cargo-xwin --locked
 
@@ -161,7 +166,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install test tools
-        run: sudo apt-get install -y xdotool
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xdotool
 
       - name: Download AppImage
         uses: actions/download-artifact@v4
