fix: add imagemagick to Linux smoke test CI (needed for import command)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -168,7 +168,7 @@ jobs:
       - name: Install test tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y xdotool
+          sudo apt-get install -y xdotool imagemagick
 
       - name: Download AppImage
         uses: actions/download-artifact@v4
