--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -194,30 +194,27 @@ jobs:
 
   smoke-test-windows:
     needs: build
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download installer
+      - name: Install Wine and test tools
+        run: |
+          sudo dpkg --add-architecture i386
+          sudo apt-get update
+          sudo apt-get install -y wine64 xdotool imagemagick
+
+      - name: Download Windows binary + DLLs
         uses: actions/download-artifact@v4
         with:
-          name: lv-windows-x86_64-installer
-          path: build-installer
-
-      - name: Download Mesa software OpenGL
-        run: |
-          Invoke-WebRequest -Uri "https://github.com/pal1000/mesa-dist-win/releases/download/25.3.4/mesa3d-25.3.4-release-msvc.7z" -OutFile mesa.7z
-          7z x mesa.7z -omesa-extract x64/opengl32.dll x64/libgallium_wgl.dll x64/libglapi.dll
-          New-Item -ItemType Directory -Force -Path mesa-dlls | Out-Null
-          Copy-Item mesa-extract/x64/*.dll mesa-dlls/ -Force
+          name: lv-windows-x86_64
+          path: win-bin
 
       - name: Generate test fixtures
-        run: python test/fixtures/generate.py
+        run: python3 test/fixtures/generate.py
 
-      - name: Run smoke test
-        env:
-          MESA_DLLS: mesa-dlls
-        run: pwsh scripts/smoke-test-windows.ps1 -UpdateReference
+      - name: Run smoke test (Wine)
+        run: xvfb-run -a bash scripts/smoke-test.sh --binary win-bin/lv-imgui.exe --wine --update-reference
 
       - name: Upload screenshots
         if: always()
